--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  margin-top: 64px;
+  margin-top: 32px;
 }
 
 .dataContainer {
@@ -21,7 +21,7 @@
 .bio {
   text-align: center;
   color: gray;
-  margin-top: 16px;
+  margin-top: 4px;
 }
 
 .waveButton {
@@ -30,5 +30,21 @@
   padding: 8px;
   border: 0;
   border-radius: 5px;
-  
+  background:linear-gradient(rgba(250,0,0,0.5),transparent);
+  background-color: orange;
+}
+
+.webBg{
+  background-size: 'cover';
+  background:linear-gradient(#6839A1,transparent);
+  background-color: #6839A1;
+  margin-top: 32px;
+  margin-left: 32px;
+  margin-right: 32px;
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
+.whiteText{
+  color: whitesmoke;
 }
