--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,16 @@
   background-color: orange;
 }
 
+.connectButton {
+  cursor: pointer;
+  margin-top: 32px;
+  margin-bottom: 16px;
+  padding: 8px;
+  border: 0;
+  border-radius: 5px;
+  background-color: #8661b3;
+}
+
 .webBg{
   background-size: 'cover';
   background:linear-gradient(#6839A1,transparent);
